<resources>
    <string name="app_name">Barzellette a caso</string>


    <!--Main Activity-->
    <string name="action_settings">Impostazioni</string>
    <string name="button_next_text">La prossima!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_icon_description">L\'icona dell\'applicazione</string>
    <string name="header_string">Categorie</string>
    <string name="label_impostazioni">Impostazioni</string>
    <string name="label_preferiti">Preferiti</string>
    <string name="label_tutte_le_barzellette">Tutte le barzellette</string>
    <string name="label_condividi">Condividi</string>

    <!--Activity dei preferiti-->
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="preferite_introduction">Ecco la lista delle tue barzellette preferite. Trascinale a destra o a sinistra per cancellarle, oppure clicca a lungo per condividerle con i tuoi amici!</string>
    <string name="button_favorite_description">Bottone per aggiungere una barzelletta ai favoriti</string>
    <string name="snackbar_text">Preferito rimosso!</string>
    <string name="snackbar_action_undo">Annulla</string>
    <string name="condividi_con">Condividi con</string>
    <string name="rate_title">Valuta l\'applicazione</string>

    <!--Nomi delle categorie-->
    <string name="categoria_animali">Animali</string>
    <string name="categoria_carabinieri">Carabinieri</string>
    <string name="categoria_dottori">Dottori</string>
    <string name="categoria_tecnologia">Tecnologia</string>
    <string name="categoria_indovinelli">Indovinelli</string>
    <string name="categoria_freddure">Freddure</string>
    <string name="categoria_uomini">Uomini</string>
    <string name="categoria_donne">Donne</string>
    <string name="categoria_bambini">Bambini</string>
    <string name="categoria_varie">Varie</string>

    <!--App Rater-->
    <string name="rate_message">Se l\'applicazione ti è piaciuta o ti ha fatto ridere almeno una volta, perchè non la valuti nel Play Store?</string>
    <string name="rate_remind_later">Più tardi</string>
    <string name="rate_positive">Va bene!</string>
    <string name="rate_never">No, grazie</string>

    <!--About Activity-->
    <string name="title_activity_about">AboutActivity</string>
    <string name="descrizione_finale">Spero proprio che l\'applicazione vi piaccia. Se avete qualche idea, suggerimento o critica non esitate a contattarmi via email e cercherò di accontentarvi. \n matteo.bucci.1995@gmail.com \n L\'icona dell\'app è stata ispirata da un set di emoticons trovato sul sito http://mooxidesign.com/ \n\n
    Novità della versione 1.2.1: \n-Migliorata decisamente la visualizzazione dei preferiti\n-Sistemato il bug dei cuoricini.\n-Aggiunta la pubblicità\n
    Novità della versione 1.3:\n-Aggiunta una transizione leggera tra i colori\n-Aggiunto il tasto indietro\n-Aggiunti gli swipe per cambiare barzelletta\n-Ora la rotazione non fa cambiare la barzelletta\n
    Novità della versione 1.4:\n-Aggiunta l\'opzione per regolare la dimensione del testo e rendere più chiaro lo sfondo\n-Un long click permette di avere dettagli sulla barzelletta\n-Bugfix e miglioramenti\n
    Novità della versione 1.5:\nNuova categoira:Bambini!\nWidget con barzelletta del giorno!\nMigliorate le prestazioni.\nPiccoli miglioramenti vari.
    Novità della versione 1.6:\nAggiunta la possibilità di segnalare o proporre una barzelletta.\nCambiato il metodo in cui veniva richiesta la valutazione.\nAltri aggiustamenti vari</string>
    <string name="application_version">v 1.6</string>
    <string name="created_by">Creata da Matteo Bucci</string>
    <string name="appwidget_text">...</string>
    <string name="add_widget">Aggiugi widget</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_barzelletta_del_giorno">Barzelletta Del Giorno</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="hint_barzelletta">Inserisci il testo della barzelletta</string>
    <string name="hint_recapito">Inserisci un recapito (opzionale)</string>
    <string name="proponi">Proponi</string>
    <string name="cancel">Annulla</string>
    <string name="hint_id">Inserisci l\'ID della barzelletta</string>
    <string name="hint_motivo">Inserisci la motivazione</string>
    <string name="descrizione_segnalazione_text">Inserisci l\'ID della barzelletta che intendi segnalare, una motivazione e il tuo recapito in modo che se necessario possiamo contattarti. L\'ID della barzelletta si trova tenendo premuto a lungo nella barzelletta: apparirà una finestrella con i dettagli della barzelletta.</string>
    <string name="segnala">Segnala</string>
    <string name="ti_piace_applicazione">Ti piace l\'applicazione?</string>
    <string name="ti_piace_message">Ti sta piacendo l\'applicazione? Faccelo sapere!</string>
    <string name="ti_piace_positive">Mi piace!</string>
    <string name="non_mi_piace">Potete fare di meglio!</string>
    <string name="label_proponi">Proponi una barzellettta</string>
    <string name="label_segnala">Segnala una barzelletta</string>
    <string name="hint_suggerimento">Inserisci un suggerimento</string>
    <string name="commenta_title">Facci sapere la tua!</string>
    <string name="commenta_string">Se hai un qualsiasi consiglio su come migliorare l\'applicazione, non esitare nel contattarci</string>
    <string name="testo_condivisione">"\n\n Presa da Barzellette a caso. Scarica l'applicazione! "</string>


</resources>
